partial hitdice function

--- a/characterCreator/index.html
+++ b/characterCreator/index.html
@@ -458,7 +458,7 @@
   <footer>
     <div class="container mt-5 mb-2" ng-if="true">
       <div class="row">
-        <small>
+        <small class="mx-auto">
           Dungeons & Dragons 5th Edition Character Creator. Arthors: Derry Everson & Mikel Jensen. Contact/Issues: <a href="https://github.com/dneverson/Character-Creator">Github</a>
           <button type="button" class="btn btn-primary btn-xs inline border-0" data-toggle="modal" data-target="#eModal" style="background:transparent; color:transparent; cursor: default;"></button>
         </small>
